--- a/src/views/editCharacters.ejs
+++ b/src/views/editCharacters.ejs
@@ -65,7 +65,7 @@
             <img src="<%= character.image %>" alt="<%= character.name %>" />
             <h3><%= character.name %></h3>
          </div>
-         <form action="/editCharacter" method="POST" class="edit-form">
+         <form action="/editarCharacter" method="POST" class="edit-form">
             <input type="hidden" name="id" value="<%= character.id %>">
             <label for="name">Nome:</label>
             <input type="text" name="name" id="name" value="<%= character.name %>" placeholder="Nome atual: <%= character.name %>" required>
